--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@bjarkehs/react-nice-dates": "^3.1.5",
     "daisyui": "^2.51.6",
     "date-fns": "^2.30.0",
+    "firebase": "^9.22.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "pigeon-maps": "^0.21.3",
